--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,8 +4,20 @@
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+  flex-wrap: wrap;
   padding: 24px;
   border-bottom: 1px solid var(--color-bg-border);
+}
+
+.headerContent {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  max-width: 720px;
 }
 
 .main {
@@ -43,7 +55,7 @@
   padding: 16px;
   border-radius: 12px;
   background: var(--color-bg-default);
-  box-shadow: var(--shadow-layer); 
+  box-shadow: var(--shadow-layer);
 }
 
 .details {
@@ -51,6 +63,13 @@
   border-radius: 12px;
   box-shadow: var(--shadow-layer);
   overflow: auto;
+}
+
+.statsMain {
+  padding: 24px;
+  height: calc(100% - 92px);
+  box-sizing: border-box;
+  overflow-y: auto;
 }
 
 @media (max-width: 1440px) {
