--- a/src/App.module.css
+++ b/src/App.module.css
@@ -19,6 +19,14 @@
   border-bottom: 1px solid var(--color-bg-border);
 }
 
+.errorBannerContent {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
+
 .header {
   display: flex;
   align-items: center;
