--- a/src/components/AdminPanel.module.css
+++ b/src/components/AdminPanel.module.css
@@ -171,6 +171,11 @@
   margin: 0;
 }
 
+.error {
+  margin: 0;
+  color: var(--color-typo-alert);
+}
+
 @media (max-width: 1200px) {
   .container {
     grid-template-columns: 1fr;
