Fix library select display in admin panel

--- a/src/components/AdminPanel.module.css
+++ b/src/components/AdminPanel.module.css
@@ -111,6 +111,15 @@
   width: 100%;
 }
 
+.listItem .select {
+  width: 100%;
+}
+
+.listItem .field {
+  flex: 1 1 220px;
+  min-width: 200px;
+}
+
 .textarea {
   min-height: 96px;
 }
