--- a/src/components/GraphView.module.css
+++ b/src/components/GraphView.module.css
@@ -6,6 +6,8 @@
   background: var(--color-bg-default);
   border: 1px solid var(--color-bg-border);
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .legend {
