--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,10 @@
 .app {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   min-height: 0;
+  overflow: hidden;
 }
 
 .loadingState {
